// 05/31/2024
- Fixed the HurtBoxes on the Main Menu go off-sync
- Fixed the Wall-Bound HurtBoxes wouldn't go off-screen when its duration finishes
- The HurtBoxes on the Main Menu are now 50x50 in size

// 05/30/2024
- The Dash doesn't go below zero now
- The Dash now always decreases by 1 when used despite you're moving diagonally
- The Dash text abive the player is aligned to the center now

// 05/29/2024
- Added an external kind of state
	+ Quittable
- The Dash text now follows the player instead of being in the top-left corner of the screen
- By holding Esc you can now quit to the Main Menu
	+ In "Game Over" state it instantly quits to the Main Menu
=============
- The background HurtBoxes on Main Menu don't spawn randomly now

// 05/28/2024
- The Player is now able to recharge the dash when not moving but still holding space
- The game now saves controls to the local storage upon changing them
- The game now actually restarts instead of reloading the page (this is the last change made btw)
- Added Settings Menu
	+ Controls
- Fixed the "Game Over" panel's size and text position

// 05/27/2024
- Added Controls instructions in Main Menu
=============
- Fixed objects in Queue won't spawn after it's finished
=============
- Added Main Menu
- Added a separate object array for particles
	+ Particles will be now under the objects
- Created Entities
	+ TrailParticle
	+ MovingTrailParticle

// 05/26/2024
- Added SpawnBox
=============
- Added Game States
	+ MainMenu
	+ Play
	+ GameOver
- Changed the level
- Somehow reinitializing the Game class makes it faster and HurtBoxes won't spawn
=============
- Added a "Wall-Bound" variation of the HurtBox
=============
- Added (Spawn) Queue

// 05/25/2024
- Changed the Player's properties
	+ Size to 25x25
- Added properties to Player
	+ Added dashMax
- Added Trail effect to Player (When dashing)
=============
- Added Settings to Game
	+ Controls

// 05/24/2024
- Created files
	+ Created index.html
	+ Created source/Main.js